--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,17 @@
   "scope": "/",
   "short_name": "Stepney Green",
   "start_url": "/",
-  "theme_color": "#ffffff"
+  "theme_color": "#ffffff",
+   "icons":[
+    {
+    "src":"192-192.png",                      
+    "sizes":"192x192",
+    "type":"image/png"
+    },
+    {
+    "src":"512-512.png",
+    "sizes":"512x512",
+    "type":"image/png"
+    }
+  ]
 }
